--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/three": "^0.154.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "three": "^0.154.0",
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "file-loader": "^6.2.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0"
   }
